--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -7,39 +7,54 @@
 
    </div> 
  </div>
-<form class="row"  #accessForm="ngForm" (ngSubmit)="accesssubmit(accessForm)">
+<form class="row"  #accessForm="ngForm" (ngSubmit)="accesssubmit(ngForm)">
     
 
-<div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-    <div class="row">
-        <div class="col-4 text-left">
-            <button type="button" (click)="checkbackaccess()" class="btn btn-link text-white">BACK</button>
-        </div>
-        <div class="col-4 text-center">
-            <h5>Subtotal:<span class="sp">${{total}}</span></h5>
-        </div>
-        <div class="col-4 text-right">
-            <button type="button" (click)="accessupdated(accessForm)" class="btn btn-link text-white">NEXT</button>
-        </div>
-    </div>
-        
-</div>
-</form>
-<div class="row">
-<div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-   <h3 class="text-center my-3">How will you access the property?</h3>
-        <p class="text-center text-danger">{{message}}</p>
-   </div>
-</div>
-     <div class="row">
-        <div class="col-xs-12 my-2 py-md-2 offset-md-3 col-md-6 lg-offset-3 col-lg-6">
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="meet('Meet agent on site')">Meet agent on site</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Lockbox')">Lockbox</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Access code')">Access Code</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="meet('Others')">Other</button>
-            <div *ngIf="codeshow">
-                <input type="text" placeholder="Code?" class="form-control p-4 numinput text-center my-5" name="code" id="code" [(ngModel)]="code" required>
+        <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+            <div class="row">
+                <div class="col-4 text-left">
+                    <button type="button" (click)="checkbackaccess()" class="btn btn-link text-white">BACK</button>
+                </div>
+                <div class="col-4 text-center">
+                    <h5>Subtotal:<span class="sp">${{total}}</span></h5>
+                </div>
+                <div class="col-4 text-right">
+                    <ng-template>
+                        <button type="button" class="btn btn-link text-white" (click)="checkaccess()">NEXT</button>
+                    </ng-template>
+                    <div *ngIf="codeshow">
+                    <button type="submit" class="btn btn-link text-white" >NEXT</button>
+                    </div>
+                </div>
             </div>
-          </div>  
+                
         </div>
+
+        <div class="col-12">
+                <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                        <h3 class="text-center my-3">How will you access the property?</h3>
+                        <p class="text-center text-danger">{{message}}</p>
+                        <div class="offset-1 col-10">
+                            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="meet('Meet agent on site')">Meet
+                                agent on site</button>
+                            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Lockbox')">Lockbox</button>
+                            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Access code')">Access
+                                Code</button>
+                            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block mb-2 " (click)="meet('Others')">Other</button>
+                            <input type="text" required class="form-control-lg col-12 text-center" placeholder="Code?" name="code" id="code"
+                                required #code autofocus>
+                            <div *ngIf="code.invalid && (code.dirty || code.touched)" class="alert alert-warning offset-md-3 col-md-6 col-xs-12 my-2">
+                            
+                                <div *ngIf="code.errors.required">
+                                    Code required.
+                                </div>
+                            
+                            </div>
+                            
+                        </div>
+                </div>
+               
+        </div>
+          
+    </form>
 <app-footer></app-footer>
