--- a/src/app/client/addonsv/addonsv.component.html
+++ b/src/app/client/addonsv/addonsv.component.html
@@ -20,7 +20,7 @@
 </div>
 <div class="row text-center">
   <div class="offset-md-3 col-md-6 col-xs-12">
-    <h3>Are there any add-ons you need to apply to this Video Tour?</h3>
+    <h3>Are there any add-ons you need to apply to the Video Tour?</h3>
     <p>*Please Select all that apply.<p>
   </div>
 </div>
