--- a/src/app/client/price/price.component.html
+++ b/src/app/client/price/price.component.html
@@ -1,7 +1,7 @@
 <div class="row" id="headerback">
   
   <div class="col-md-12 text-center" id="view">
-  <span class="rounded-circle mb-4 bg-white"><img src="/assets/image/icons/" class="p-2"></span>
+  <span class="rounded-circle mb-4 bg-white"><img src="/assets/image/icons/icon-72x72.png" class="p-2"></span>
 </div>
 <div class="menu mb-2 bg-white border border-grey">
   <h3 class="text-center p-3  ">PRICE MENU</h3>
@@ -208,5 +208,5 @@ for mobile -->
 <!--Nav pills Vertical-->
 
 </div>
-<app-footer></app-footer>
+
 
