--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-12">
       <h3 class="text-center text-white">Welcome , {{auth.displayName | titlecase}}!</h3>
   
-      <p class="text-center text-white">placeorder</p>
+      <p class="text-center text-white"><br></p>
      
     </div>
   </div>
