--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -11,8 +11,8 @@
 <div class="row">
   <div class="offset-md-2 col-md-8 col-xs-12">
     <h3 class="text-center mt-2">What type of property is this?</h3>
-    </div>
-    </div>
+  </div>
+</div>
 <div class="row">
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
           <div class="row  m-lg-3 m-md-5 my-5">
@@ -44,15 +44,16 @@
                </div>
           
             </div>
-            <div class="col-xd col-6 mb-5">
+            <div class="col-xd col-6">
         
               <div class="mx-auto col-lg-8 col-12" routerLink="/address" skipLocationChange>
                 <a (click)="upbuilding('Commercial')">
                 <img src="/assets/image/icons/picc.png" class="img-fluid" alt="Commercial">
                 </a>
-               </div>
+              </div>
           
             </div>
-    </div>  
-</div>
-<app-footer></app-footer>
+          </div> 
+          <app-footer></app-footer>
+    </div>
+
