--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -13,7 +13,7 @@
                 <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
               </div>
             <div class="col-md-4 col-4 text-right">
-                <button type="button" class="btn btn-link text-white">NEXT</button>
+             <br>
             </div>
        </div>
 </div>
@@ -33,21 +33,21 @@
                     
                    <li><a [routerLink]="['/placeorder']" routerLinkActive="router-link-active" skipLocationChange>{{propertytype}}</a></li>
                    <li><a [routerLink]="['/squarefeet']" routerLinkActive="router-link-active" skipLocationChange>{{squarefeet}}</a></li>
-                   <li><a [routerLink]="['/address']" routerLinkActive="router-link-active" skipLocationChange><span class="ml-2 pl-1">{{street}}</span><br><span class="ml-5">{{city}}</span><br><span class="ml-5">{{zip}}<br></span><span *ngIf="appartmentunitno !='no unit'">{{appartmentunitno}}</span></a></li>  
-                   <li><a [routerLink]="['/products']" routerLinkActive="router-link-active" skipLocationChange><span><b>Products</b></span><ul *ngFor="let hero of ordersuarray;let i=index;">
+                   <li><a [routerLink]="['/address']" routerLinkActive="router-link-active" skipLocationChange>{{street}}, {{city}}, {{zip}}, <span *ngIf="appartmentunitno !='no unit'">{{appartmentunitno}}</span></a></li>  
+                   <li><a [routerLink]="['/products']" routerLinkActive="router-link-active" skipLocationChange><b>Products</b><br><ul *ngFor="let hero of ordersuarray;let i=index;">
                     <li class="ml-4 pl-2">{{hero}}</li>
                   
                   </ul></a>
                   </li>
                 
-                  <li *ngIf="ispaddonarray"><a [routerLink]="['/addons']" routerLinkActive="router-link-active" skipLocationChange><span><b>Photography Addons</b></span>
+                  <li *ngIf="ispaddonarray"><a [routerLink]="['/addons']" routerLinkActive="router-link-active" skipLocationChange><b>Photography Addons</b>
                       <ul *ngFor="let hero of paddonsuarray;let i=index;">
                         <li class="ml-4 pl-2">{{hero}}</li>
                       
                       </ul>
                     </a>
                   </li>
-                  <li *ngIf="isvaddonarray"><a [routerLink]="['/addonsv']" routerLinkActive="router-link-active" skipLocationChange><span><b>Video Addons</b></span>
+                  <li *ngIf="isvaddonarray"><a [routerLink]="['/addonsv']" routerLinkActive="router-link-active" skipLocationChange><b>Video Addons</b>
                       <ul *ngFor="let hero of vaddonsuarray;let i=index;">
                         <li class="ml-4 pl-2">{{hero}}</li>
                       
