--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -32,7 +32,7 @@
       </div>
 
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 py-5 ">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+      <div class="offset-md-3 col-md-6 col-xs-12 my-2 px-5">
         <mat-form-field class="example-full-width">
           <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
