--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,10 @@ h4{
     font-size: .75rem;
     font-weight: bolder;
 }
+@media(min-width: 360px) and (max-width: 500px){
+    .btn1{
+        width:80vw !important;
+        margin-left: 20px !important;
+    }
+}
+    
