--- a/src/app/client/addons/addons.component.html
+++ b/src/app/client/addons/addons.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row mb-4">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center sp">Products </h4>
@@ -19,16 +19,15 @@
   </div>
 </div>
 <div class="row text-center">
-    <div class="offset-md-3 col-md-6 col-xs-12">
+    <div class="offset-md-2 col-md-8 col-xs-12">
       <h3>Are there any add-ons you need to apply to this Photography?</h3>
       <p>*Please Select all that apply.<p>
     </div>
   </div>
   <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+      <div class="offset-2 col-8 my-2">
           <button type="button" (click)="pushpcs($event,'Community shot')" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block">Community Shots(+$50)</button>
           <button type="button" (click)="pushpts($event,'Twlight Shot')" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block">Twlight Shots(+$50)</button>
           <button type="button" (click)="pushvrf($event,'Rush Fee')" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block">Rush Fee(+$75)</button>
       </div>
   </div>
-  <app-footer></app-footer>
