--- a/src/app/client/addonv/addonv.component.html
+++ b/src/app/client/addonv/addonv.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row mb-5">
-  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bg-dark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Products </h4>
@@ -19,24 +19,15 @@
   </div>
 </div>
 <div class="row text-center">
-    <div class="offset-md-3 col-md-6 col-xs-12">
+    <div class="offset-2 col-8">
       <h3>Are there any add-ons you need to apply to this product?</h3>
       <p>*Please Select all that apply.<p>
     </div>
   </div>
   <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+      <div class="offset-2 col-8 my-2">
           <button  class="btn btn1 btn-lg btn-block " (click)="pushvcs($event, 'Community Shots')">Community Shots(+$50)</button>
+          <button class="btn btn1 btn-lg btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight Shots(+$50)</button>
+            <button type="button" class="btn btn1 btn-lg btn-block" (click)="pushvrf($event, 'Rush Fee')">Rush Fee(+$75)</button>
       </div>
   </div>
-  <div class="row">
-          <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button  class="btn btn1 btn-lg btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight Shots(+$50)</button>
-          </div>
-  </div>
-  <div class="row">
-      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-      <button type="button" class="btn btn1 btn-lg btn-block"  (click)="pushvrf($event, 'Rush Fee')">Rush Fee(+$75)</button>
-      </div>
-  </div>
-  <app-footer></app-footer>
