--- a/src/app/client/completeorder/completeorder.component.html
+++ b/src/app/client/completeorder/completeorder.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row">
-  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bg-dark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Order Complete </h4>
@@ -24,7 +24,7 @@
         <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 mt-5">
             <button type="button" class="btn btn2 btn-md btn-block py-3" [routerLink]="['/main']" routerLinkActive="router-link-active" skipLocationChange>BACK HOME</button>
-             <button type="button" class="btn btn3 btn-md btn-block py-3" [routerLink]="['/placeorder']" routerLinkActive="router-link-active" skipLocationChange>PLACE NEW ORDER</button>
+             <button type="button" class="btn btn3 btn-md btn-block py-3" [routerLink]="['/main/order/placeorder']" routerLinkActive="router-link-active" skipLocationChange>PLACE NEW ORDER</button>
               </div>
             </div>
             
