--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-1">
+  <div class="bgdark col-12 p-1">
     <div class="col-md-12">
       <h3 class="text-center text-white">Place New Order</h3>
       <p class="text-center text-white">Orders are itemized by property, per unit.</p>
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="row">
-    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-12">
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 ">
               <div class="mx-auto col-lg-8 col-12" routerLink="/address">
@@ -54,6 +54,6 @@
           
             </div>
           </div> 
-          <app-footer></app-footer>
+         
     </div>
 
