--- a/src/app/client/units/units.component.html
+++ b/src/app/client/units/units.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Products </h4>
@@ -8,7 +8,7 @@
   </div>
 </div>
   <form class="row" #unitsform="ngForm"  (ngSubmit)="unitssubmit()">
-    <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="bgdark col-12">
       <div class="col-md-12 ">
         <button class="btn btn-link text-white" (click)="gotoplaceorder()">BACK</button>
         <button type="submit"  class="btn btn-link float-right text-white ">NEXT</button>
@@ -34,4 +34,3 @@
  
 
 
-<app-footer></app-footer>
