--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -1,7 +1,7 @@
-<app-navbar></app-navbar>
+
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-    
+  <div class="bgdark col-12">
+            
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center sp">Property Access </h4>
 
@@ -10,7 +10,7 @@
 <form class="row"  #accessForm="ngForm" (ngSubmit)="accesssubmit(ngForm)">
     
 
-        <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+        <div class="bgdark col-12">
             <div class="row">
                 <div class="col-4 text-left">
                     <button type="button" (click)="checkbackaccess()" class="btn btn-link text-white">BACK</button>
@@ -31,10 +31,10 @@
         </div>
 
         <div class="col-12">
-                <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                <div class="col-12">
                         <h3 class="text-center my-3">How will you access the property?</h3>
                         <p class="text-center text-danger">{{message}}</p>
-                        <div class="offset-1 col-10">
+                        <div class="offset-2 col-8">
                             <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="meet('Meet agent on site')">Meet
                                 agent on site</button>
                             <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Lockbox')">Lockbox</button>
@@ -57,4 +57,3 @@
         </div>
           
     </form>
-<app-footer></app-footer>
