--- a/src/app/client/addonsv/addonsv.component.html
+++ b/src/app/client/addonsv/addonsv.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row mb-5">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="col-md-12">
       <h3 class="text-center text-white">New Order > First Unit</h3>
       <h4 class="text-center">Products </h4>
@@ -19,24 +19,17 @@
   </div>
 </div>
 <div class="row text-center">
-  <div class="offset-md-3 col-md-6 col-xs-12">
+  <div class="offset-md-2 col-md-8 ">
     <h3>Are there any add-ons you need to apply to the Video Tour?</h3>
     <p>*Please Select all that apply.<p>
   </div>
 </div>
 <div class="row">
-  <div class="offset-md-3 col-md-6 col-xs-12 my-1">
+  <div class="offset-md-2 col-md-8 col-xs-12 my-1">
     <button class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block " (click)="pushvcs($event, 'Community Shots')">Community Shots(+$50)</button>
+    <button class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight
+      Shots(+$50)</button>
+      <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block mb-5" (click)="pushvrf($event, 'Rush Fee')">Rush
+        Fee(+$75)</button>
   </div>
 </div>
-<div class="row">
-  <div class="offset-md-3 col-md-6 col-xs-12 my-1">
-    <button class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block" (click)="pushvts($event, 'Twlight Shots')">Twlight Shots(+$50)</button>
-  </div>
-</div>
-<div class="row">
-  <div class="offset-md-3 col-md-6 col-xs-12 my-1">
-    <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block mb-5" (click)="pushvrf($event, 'Rush Fee')">Rush Fee(+$75)</button>
-  </div>
-</div>
-<app-footer></app-footer>
