--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
  <div class="row" >
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class=" col-md-12">
           <h3 class="text-center text-white">New Order > {{totalunits}} First Unit</h3>
           <h4 class="text-center sp">{{propertytype}} Address </h4>
@@ -8,15 +8,15 @@
   </div> 
  </div>
  <form class="row" [formGroup]="addressformgroup" (ngSubmit)="Onaddresssubmit()">
-    <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="bgdark col-12">
       <div class="col-md-12 "> 
-        <button class="btn btn-link text-white" [routerLink]="['/placeorder']" routerLinkActive="router-link-active" skipLocationChange >BACK</button>
+        <button class="btn btn-link text-white" (click)="pl()">BACK</button>
         <button type="submit" [disabled]="!addressformgroup.valid"  class="btn btn-link float-right text-white ">NEXT</button>
     
       </div>
       
     </div>
-    <div class="mt-3 mb-5 offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="mt-3 mb-5 offset-1 col-10">
       <input type="text" placeholder="Street Address" class="numinput form-control p-4 text-center my-5"  formControlName="street" name="street" id="name" required >
     <!-- <p>{{addressformgroup.get('street').value}}</p> -->
        <!-- <div *ngIf="addressformgroup.controls['street'].haserror('required')">
@@ -61,4 +61,4 @@
     
   
  </form>      
-          <app-footer></app-footer>
+    
