--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -1,10 +1,8 @@
-<app-navbar></app-navbar>
-
 
 <div class="row">
   
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-3">
-    <div class="col-md-12">
+  <div class="bgdark col-12">
+    <div class="col-12">
       <h3 class="text-center text-white">Welcome , {{auth.displayName | titlecase}}!</h3>
   
       <p class="text-center text-white"><br></p>
@@ -13,17 +11,17 @@
   </div>
 </div>
 <div class="row">
-    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-12">
   
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 sm-p-2">
               <div class="position-absolute" style="right:0"></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/placeorder" skipLocationChange><img src="/assets/image/icons/p1.png" class="img-fluid" id="placeorder"></div>
+              <div class="mx-auto col-lg-8 col-12" (click)="placeorder()" ><img src="/assets/image/icons/p1.png" class="img-fluid" id="placeorder"></div>
           
             </div>
             <div class="col-xd col-6">
               <div class="position-absolute" style="right:0"></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/myorder"><img src="/assets/image/icons/p3.png" class="img-fluid" id="myorder"></div>
+              <div class="mx-auto col-lg-8 col-12" (click)="myorder()"><img src="/assets/image/icons/p3.png" class="img-fluid" id="myorder"></div>
               <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
                 <div *ngIf="avisosTest | async as aviso">
                     <ul style="display:none">
@@ -39,11 +37,11 @@
           <div class="row m-lg-3 m-md-5 my-5">
             <div class=" col-xd col-6 ">
                 <div class="position-absolute px-3" style="right:0"><div class=""></div></div>
-                <div class="mx-auto col-lg-8 col-12" routerLink="/myaccount"><img src="/assets/image/icons/p5.png" class="img-fluid" id="myaccount"></div>        
+                <div class="mx-auto col-lg-8 col-12" (click)="myaccount()"><img src="/assets/image/icons/p5.png" class="img-fluid" id="myaccount"></div>        
             </div>
             <div class="col-xd col-6 ">
               <div class="position-absolute px-3" style="right:0"><div class=""></div></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/deliveries"><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
+              <div class="mx-auto col-lg-8 col-12" (click)="delivery()"><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
               <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
                 <div *ngIf="avisosTest | async as aviso">
                     <ul style="display:none">
@@ -63,4 +61,4 @@
 </div>
 </div>
     
-<app-footer></app-footer>
+
