--- a/src/app/client/products/products.component.html
+++ b/src/app/client/products/products.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="row mb-4">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="col-md-12">
       <h3 class="text-center text-white">New Order > First Unit</h3>
       <h4 class="text-center">Products </h4>
@@ -25,7 +25,7 @@
   </div>
 </div>
 <div class="row ">
-  <div class="col-xs-12 my-2 py-md-2 offset-md-3 col-md-6 lg-offset-3 col-lg-6">
+  <div class="offset-2 col-8">
     <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="pushpgy($event, 'Photography')">Photography</button>
     <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="pusht360($event, 'Tour 360')">360 Tour</button>
     <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="pushvt($event, 'Video Tour')"> Video Tour</button>
