--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -1,6 +1,5 @@
-<app-navbar></app-navbar>
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="row">
       <div class="col-md-12">
         <h3 class="text-center text-white">New Order > First Unit</h3>
@@ -11,7 +10,7 @@
   </div> 
 </div>  
   <form class="row" #visitingdatefg="ngForm" (ngSubmit)="Onvisitingsubmit(visitingdatefg)">
-    <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="bgdark col-12">
       <div class="row">
         <div class="col-md-4 col-4 text-left">
           <button type="button" class="btn btn-link text-white" [routerLink]="['/access']" routerLinkActive="router-link-active"
@@ -27,11 +26,11 @@
        
     </div>
    
-      <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+      <div class="col-12">
         <h3 class="text-center my-5">Please choose an available date for this order </h3>
       </div>
 
-    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 py-5 ">
+    <div class="col-12 py-5 ">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2 px-5">
         <mat-form-field class="example-full-width">
           <input name="visitingdate" matInput ngModel #visitingdate="ngModel" [matDatepickerFilter]="myFilter"  [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date" >
@@ -43,4 +42,3 @@
 
     </div>
   </form>
-<app-footer></app-footer>
