--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>
+
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center sp">Pick a Time </h4>
@@ -19,12 +19,12 @@
         </div>
         </div>
         <div class="row text-center mb-2">
-          <div class="offset-md-2 col-md-8 col-xs-12 my-4">
+          <div class="offset-md-1 col-md-10 col-xs-12 my-4">
             <h3>Great! Now please Pick a time slot that we have available on {{visitingdatenow | date:'MMM d, y'}}</h3>
           </div>
         </div>
     <div class="row">
-      <div class="col-xs-12 my-2 py-md-2 offset-md-3 col-md-6 lg-offset-3 col-lg-6">
+      <div class="col-xs-12 my-2 py-md-2 offset-md-2 col-md-8 lg-offset-2 col-lg-8">
           <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatetime(10)">10:00 AM</button>
          <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="updatetime(11)">11:00 AM</button>
         <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block " (click)="updatetime(12)">12:00 PM</button>
@@ -33,5 +33,5 @@
       </div>
       </div>
     
-      <app-footer></app-footer>
+   
      
