--- a/src/app/client/container/container.component.html
+++ b/src/app/client/container/container.component.html
@@ -19,7 +19,7 @@
                   <a class="nav-link text-white" [routerLink]="['./myorder']" routerLinkActive="active">My Orders</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['./myaccount']" routerLinkActive="active">My Account</a>
+                  <a class="nav-link text-white" [routerLink]="['/myaccount/main']" routerLinkActive="active">My Account</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" [routerLink]="['./delivery']" routerLinkActive="active">Deliveries</a>
