--- a/src/app/client/delivery/delivery.component.html
+++ b/src/app/client/delivery/delivery.component.html
@@ -1,6 +1,6 @@
-<app-navbar></app-navbar>         
+      
 <div class="row">
-  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark col-12">
     <div class="col-md-12">
           <h4 class="text-center text-white">My Deliveries</h4>
     
