--- a/src/app/client/footer/footer.component.html
+++ b/src/app/client/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="row " style="margin-bottom:45px" >
+<div class="row " style="margin-bottom:45px; " >
   <div class="col-sm-12 col-offset-2 text-center mt-5">
     <div  (swipe)="onSwipe($event)"   >
        
