--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bg-dark col-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">My Invoices</h3>
     </div>
