--- a/src/app/client/myaccount/myaccount.component.html
+++ b/src/app/client/myaccount/myaccount.component.html
@@ -1,9 +1,9 @@
-<app-navbar></app-navbar>
+
 
 
 <div class="row">
   
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-3">
+  <div class="bgdark col-12 p-3">
     <div class="col-md-12">
       <h3 class="text-center text-white">My Account</h3>
 
@@ -17,29 +17,29 @@
   </div>
 </div>
 <div class="row">
-    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-12">
   
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 sm-p-2">
               <div class="position-absolute" style="right:0"></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/invoice"><img src="/assets/image/icons/acc1.png" class="img-fluid" id="invoices"></div>
+              <div class="mx-auto col-lg-8 col-12" (click)="invoice()"><img src="/assets/image/icons/acc1.png" class="img-fluid" id="invoices"></div>
           
             </div>
             <div class="col-xd col-6">
               <div class="position-absolute" style="right:0"></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/"><img src="/assets/image/icons/acc2.png" class="img-fluid" id="make a payment"></div>
+              <div class="mx-auto col-lg-8 col-12" (click)="pay()"><img src="/assets/image/icons/acc2.png" class="img-fluid" id="make a payment"></div>
           
             </div>  
           </div>
           <div class="row m-lg-3 m-md-5 my-5">  
             <div class=" col-xd col-6 ">
                 <div class="position-absolute px-3" style="right:0"><div class="circle">11</div></div>
-                <div class="mx-auto col-lg-8 col-12" routerLink="/"><img src="/assets/image/icons/acc3.png" class="img-fluid" id="payment info"></div>
+                <div class="mx-auto col-lg-8 col-12" (click)="payment()"><img src="/assets/image/icons/acc3.png" class="img-fluid" id="payment info"></div>
           
             </div>
             <div class="col-xd col-6 ">
               <div class="position-absolute px-3" style="right:0"><div class="circle">1</div></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/editprofile">
+              <div class="mx-auto col-lg-8 col-12" (click)="editprofile()">
                 <img src="/assets/image/icons/acc4.png" class="img-fluid" id="edit profile-"></div>
           
             </div>
@@ -47,4 +47,3 @@
 </div>
 </div>
     
-<app-footer></app-footer>
