--- a/src/app/client/profile/profile.component.html
+++ b/src/app/client/profile/profile.component.html
@@ -4,11 +4,11 @@
     <div class="row">
       
       <div class="offset-2 col-8">
-       
-       
-      
-          <img src='https://firebasestorage.googleapis.com/v0/b/agent-sync-sonderworks.appspot.com/o/userprofile%2Fuser.jpg?alt=media&token=d3b47a22-a861-4c7a-9104-bef874ea39bf'
-            class="img-thumbnail img-fluid">
+       <div class="mb-4" *ngIf="(profile | async)?.url === empty ; else templateName"><img src='https://firebasestorage.googleapis.com/v0/b/agent-sync-sonderworks.appspot.com/o/userprofile%2Fuser.jpg?alt=media&token=d3b47a22-a861-4c7a-9104-bef874ea39bf'
+        class="img-thumbnail img-fluid"></div>
+        <ng-template #templateName>
+          <img [src]="(profile | async)?.url" class="img-thumbnail img-fluid">
+      </ng-template>
        
           <p>{{(profile | async)?.displayName | titlecase }} </p>
           <hr>
